# document_assistant_agent

./: .gitignore  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: black.yml  verify-pr.yml
document_assistant_agent/data_pipelines/: pdf_text_extract.py
document_assistant_agent/helpers/: document_download.py  keep_relevant_pages.py
rag_sql_agent/: __init__.py
rag_sql_agent/cfg/: __init__.py  default.yaml
rag_sql_agent/data_pipelines/: __init__.py  agent.py  create_vector_db.py  extract_entities.py  pdf_text_extract.py
rag_sql_agent/helpers/: document_download.py  keep_relevant_pages.py
rag_sql_agent/utils/: __init__.py  loaders.py
