[tool.poetry]
name = "document_assistant_agent"
version = "0.1.0"
description = "Assistan agent for retrieving useful data fast with agents"
authors = ["Your Name <your_email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pypdf = "^5.1.0"
transformers = "^4.47.1"
fitz = "^0.0.1.dev2"
pillow = "^11.1.0"
pymupdf = "^1.25.1"
torch = "2.4.1"
protobuf = "^5.29.2"
sentencepiece = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
